--- a/src/jd/cards_yaml/0012-pure-economic-loss-relational.yml
+++ b/src/jd/cards_yaml/0012-pure-economic-loss-relational.yml
@@ -33,111 +33,30 @@ back: |
 
   Conclusion.
   Evaluate determinacy, control, vulnerability, and coherence to conclude whether the salient features justify imposing a duty.
-
-diagram: |-
+diagram: |
   ```mermaid
   mindmap
-    root((Relational Pure Economic Loss))
-      Issue
-        Business shutdowns / third-party damage?
-      Rule
-        Foreseeability is not enough
-        Salient features: known class • control/knowledge • vulnerability
-        Coherence with contracts/statutes
-      Application
-        Confirm pure loss; isolate determinate class
-        Establish control/assumption and knowledge of risk
-        Show vulnerability; check coherence and conclude on duty
-      Authorities
-        Perre v Apand
-        Stavar
-      Statute
-        Wrongs Act Pt IVAA (apportionment context)
-        ACL s 18 / s 236 (overlay)
+  root((Relational Pure Economic Loss))
+    A. Issue
+      Duty for business shutdowns/third-party damage?
+    B. Rule
+      Duty is exceptional
+      Salient features: known class • control/knowledge • vulnerability
+      Coherence with contracts/statutes
+    C. Application
+      Confirm pure loss; identify determinate class
+      Establish control/knowledge of risk
+      Show vulnerability; check coherence
+    D. Limits/Statutes
+      s 48 Wrongs Act 1958 (Vic)
+      ACL s 18, s 236 (overlay)
+    E. Authorities
+      Perre v Apand
+      Caltex Refineries
+      Woolcock Street
   ```
-
 tripwires:
-  - "Assuming pure economic loss duties arise on foreseeability alone."
-  - "Collapsing vulnerability into mere financial exposure without self-protection analysis."
-  - "Ignoring contractual/statutory coherence when weighing salient features."
-  - "Treating proportionate liability or ACL overlays as duty substitutes instead of separate regimes."
-
-why_it_matters: |
-  Melbourne Law School exams reward rigorous application of the salient features test beyond mere foreseeability. Strong answers isolate a determinate plaintiff or class, critically analyse vulnerability and contractual risk allocation, and integrate statutory overlays such as the Wrongs Act Pt IVAA and the Australian Consumer Law with a concise, policy-based conclusion.
-
-mnemonic: >
-  KNOWN-VIC: Known class; Vulnerability; Omission/control; No self-protection; Coherence; ACL overlay
-
-anchors:
-  cases:
-    - name: Perre v Apand Pty Ltd
-      citation: (1999) 198 CLR 180
-      court: HCA
-      pinpoints:
-        - 192
-        - "[4]-[5]"
-        - 253
-        - "[198]"
-      notes: Established the salient features test for relational economic loss.
-
-    - name: Caltex Refineries (Qld) Pty Ltd v Stavar
-      citation: "[2009] NSWCA 258"
-      court: NSWCA
-      pinpoints:
-        - "[102]-[103]"
-      notes: Refined the salient features approach for economic loss.
-
-    - name: Caltex Oil (Australia) Pty Ltd v The Dredge 'Willemstad'
-      citation: (1976) 136 CLR 529
-      court: HCA
-      pinpoints:
-        - "556-557"
-      notes: Early recognition of relational economic loss claims.
-
-    - name: Woolcock Street Investments Pty Ltd v CDG Pty Ltd
-      citation: "[2004] HCA 16"
-      court: HCA
-      pinpoints:
-        - "[55]"
-      notes: Clarified vulnerability as a key factor.
-
-    - name: Brookfield Multiplex Ltd v Owners SP 61288
-      citation: "[2014] HCA 36"
-      court: HCA
-      pinpoints:
-        - "[116]"
-      notes: Applied vulnerability analysis in commercial context.
-
-  statutes:
-    - name: Wrongs Act 1958 (Vic)
-      provisions:
-        - Pt IVAA
-      notes: Governs proportionate liability for economic loss claims.
-
-    - name: Competition and Consumer Act 2010 (Cth)
-      provisions:
-        - s 18
-        - s 236
-      notes: Prohibits misleading or deceptive conduct and provides remedies.
-
-reading_level: Plain English (JD)
-tags:
-  - LAWS50025
-  - Torts
-  - Pure_Economic_Loss
-  - Relational_Loss
-  - Duty
-  - Exam_Fundamentals
-  - MLS_H1
-
-keywords:
-  - relational-economic-loss
-  - salient-features
-  - vulnerability-analysis
-  - known-class
-  - coherence-constraint
-  - proportionate-liability
-  - acl-s18
-  - wrongs-act-pt-ivaa
-  - commercial-context
-  - policy-balancing
+- Assuming pure economic loss duties arise on foreseeability alone.
+- Collapsing vulnerability into mere financial exposure without self-protection analysis.
+- Ignoring contractual/statutory coherence when weighing salient features.
+- Treating proportionate liability or ACL overlays as duty substitutes instead of separate regimes.
