--- a/src/jd/cards_yaml/0010-public-authority-duty.yml
+++ b/src/jd/cards_yaml/0010-public-authority-duty.yml
@@ -4,131 +4,123 @@ back: |
   When should a Victorian court recognise a private-law duty of care owed by a public authority to the plaintiff?
 
   Rule.
-  Foreseeability is necessary but not sufficient. Duty turns on salient features constrained by institutional and statutory coherence; the policy/operational distinction is a filter, not an immunity. Central indicators include the authority’s control, knowledge, assumption/responsibility, reliance/vulnerability, and risks of indeterminate liability. Key authorities: Sullivan v Moody (2001) 207 CLR 562, 579–580 [49]–[53]; Pyrenees Shire Council v Day (1998) 192 CLR 330, [347]–[349], [355]–[357].
+  Foreseeability is necessary but not sufficient. Duty turns on salient features constrained by institutional and statutory coherence; the policy/operational distinction is a filter, not an immunity. Central indicators include the authority’s control, knowledge, assumption/responsibility, reliance/vulnerability, resource allocation limits, and risks of indeterminate liability. Key authorities: Sullivan v Moody (2001) 207 CLR 562, 579–580 [49]–[53]; Pyrenees Shire Council v Day (1998) 192 CLR 330, [347]–[349], [355]–[357].
 
   Application scaffold.
   (1) Run the statutory coherence gate: identify the empowering scheme, its purpose/limits, and any preconditions.
   (2) Characterise the impugned act/omission (policy vs operational) and any specific undertaking or control.
   (3) Evaluate salient features: control, vulnerability/reliance, knowledge, indeterminacy, autonomy, and third-party agency.
-  (4) Check consistency with remedial/rights frameworks and resource allocation provisions.
+  (4) Check statutory purpose, resource allocation provisions, and Charter coherence before extending duty.
   (5) Supporting authorities: Hunter and New England Local Health District v McKenna (2014) 253 CLR 270, 279–284 [17]–[40]; Stuart v Kirkland-Veenstra (2009) 237 CLR 215, 230–236 [43]–[81]; Caltex Refineries (Qld) Pty Ltd v Stavar [2009] NSWCA 258, [103].
 
   Authorities map.
-  - Sullivan v Moody — Coherence limits on duty recognition.
-  - Pyrenees Shire Council v Day — Fire inspection duties; policy/operational calibration.
-  - Stuart v Kirkland-Veenstra — Control/statutory preconditions.
-  - Hunter v McKenna — Statutory coherence and resource constraints.
-  - Stavar — Salient-features synthesis.
+  - Sullivan v Moody (2001) 207 CLR 562 — coherence limits on recognising new duties.
+  - Pyrenees Shire Council v Day (1998) 192 CLR 330 — fire inspection duties; policy/operational calibration.
+  - Stuart v Kirkland-Veenstra (2009) 237 CLR 215 — control and statutory preconditions.
+  - Hunter and New England Local Health District v McKenna (2014) 253 CLR 270 — statutory coherence and resource constraints.
+  - Caltex Refineries (Qld) Pty Ltd v Stavar [2009] NSWCA 258, [103] — salient-features synthesis (persuasive).
 
   Statutory hook.
   - Wrongs Act 1958 (Vic) s 48 (general negligence); ss 83–85 (public-authority principles, resource and responsibility filters).
   - Charter of Human Rights and Responsibilities Act 2006 (Vic) ss 7, 21, 38 — coherence check, not a direct cause of action.
 
   Tripwires.
-  Refer to the dedicated `tripwires` list below for recurring pitfalls when arguing public authority duties.
+  Refer to the dedicated `tripwires` list below for recurring public authority duty pitfalls before finalising any argument.
 
   Conclusion.
-  No standing duty exists; recognition is most likely where the authority undertook or controlled a specific operational function, knew of a discrete risk to a vulnerable plaintiff who reasonably relied, and recognition aligns with the statute and rights framework.
+  No standing duty exists; recognition is most likely where the authority undertook or controlled a specific operational function, knew of a discrete risk to a vulnerable plaintiff who reasonably relied, and coherence with the empowering statute and rights framework is maintained.
 
 why_it_matters: |
   MLS problems often involve councils, police, or health services. This card supplies an IRAC gateway focused on statutory coherence, policy/operational character, and salient features, avoiding common errors (assuming a rescue duty; merits-review drift; ignoring resource limits and Charter coherence). The cited pinpoints enable fast, authoritative duty analysis under exam pressure.
 
-mnemonic: |
-  POLAR-CC → Policy vs Operational → Legal coherence → Assumption/Responsibility → Reliance/Vulnerability → Control → Charter & causation
+mnemonic: POLAR-CC
 
 diagram: |-
   ```mermaid
   mindmap
-    root((Public authority duty — Vic))
-      Issue
-        When will a court recognise a negligence duty?
-      Rule
+    root((Public authority duty))
+      A. Issue
+        Duty of care recognition
+      B. Rule
         Foreseeability necessary, not sufficient
         Salient features + coherence (no blanket immunity)
         Policy/operational = filter, not defence
-      Apply
+      C. Application
         Read empowering statute; purpose/limits
         Control/assumption • reliance/vulnerability • indeterminacy
-        Charter/resource coherence; avoid merits-review
-      Authorities
-        Sullivan v Moody; Pyrenees
-        Kirkland-Veenstra; McKenna
-      Statutes
-        Wrongs Act ss 83–85; s 48
-        Charter ss 7, 21, 38 (coherence)
+      D. Authorities
+        Sullivan v Moody (2001) 207 CLR 562
+        Pyrenees Shire Council v Day (1998) 192 CLR 330
+        Stuart v Kirkland-Veenstra (2009) 237 CLR 215
+      E. Statutes
+        Wrongs Act 1958 (Vic) s 48; ss 83–85
+        Charter of Human Rights and Responsibilities Act 2006 (Vic) ss 7, 21, 38
   ```
-
 tripwires:
-  - "Treating policy/operational as automatic immunity."
-  - "Assuming a general governmental rescue duty to prevent third-party harm."
-  - "Ignoring statutory purpose or resource-allocation limits when framing duty."
-  - "Conflating third-party wrongdoing with control/assumption by the authority."
-  - "Skipping Charter coherence before extending duty."
-
+- Policy/operational distinction is not an immunity.
+- No general rescue duty exists for public authorities.
+- Statutory purpose/resource limits must be considered.
+- Charter coherence is essential before duty extension.
 anchors:
   cases:
-    - name: Sullivan v Moody
-      citation: (2001) 207 CLR 562
-      court: HCA
-      pinpoints:
-        - "[49]-[53]"
-      notes: Coherence constraints on public authority duty.
-
-    - name: Pyrenees Shire Council v Day
-      citation: (1998) 192 CLR 330
-      court: HCA
-      pinpoints:
-        - "[347]-[349]"
-        - "[355]-[357]"
-      notes: Statutory purpose and operational duties.
-
-    - name: Stuart v Kirkland-Veenstra
-      citation: (2009) 237 CLR 215
-      court: HCA
-      pinpoints:
-        - "[41]-[45]"
-      notes: No duty absent control or statutory preconditions.
-
-    - name: Hunter and New England Local Health District v McKenna
-      citation: (2014) 253 CLR 270
-      court: HCA
-      pinpoints:
-        - "[17]-[40]"
-      notes: Statutory coherence and resource limits.
-
-    - name: Caltex Refineries (Qld) Pty Ltd v Stavar
-      citation: "[2009] NSWCA 258"
-      court: NSWCA
-      pinpoints:
-        - "[103]"
-      notes: Salient features synthesis.
-
+  - name: Sullivan v Moody
+    citation: (2001) 207 CLR 562
+    court: HCA
+    pinpoints:
+    - "579–580"
+    - "[49]–[53]"
+    notes: Coherence limits on novel duties.
+  - name: Pyrenees Shire Council v Day
+    citation: (1998) 192 CLR 330
+    court: HCA
+    pinpoints:
+    - "347–349"
+    - "355–357"
+    notes: Fire inspection duties; policy versus operational calibration.
+  - name: Stuart v Kirkland-Veenstra
+    citation: (2009) 237 CLR 215
+    court: HCA
+    pinpoints:
+    - "230–236"
+    - "[43]–[81]"
+    notes: Control and statutory preconditions for public authority liability.
+  - name: Hunter and New England Local Health District v McKenna
+    citation: (2014) 253 CLR 270
+    court: HCA
+    pinpoints:
+    - "279–284"
+    - "[17]–[40]"
+    notes: Statutory coherence and resource allocation limits.
+  - name: Caltex Refineries (Qld) Pty Ltd v Stavar
+    citation: [2009] NSWCA 258
+    court: NSWCA
+    pinpoints:
+    - "[103]"
+    notes: Salient-features synthesis (persuasive).
   statutes:
-    - name: Wrongs Act 1958 (Vic)
-      provisions:
-        - s 48
-        - s 83
-        - s 84
-        - s 85
-      notes: >-
-        s 48: breach analysis; s 83: resource/responsibility constraints;
-        s 84: wrongful exercise/failure; s 85: exercise alone does not create duty.
-
-    - name: Charter of Human Rights and Responsibilities Act 2006 (Vic)
-      provisions:
-        - s 7
-        - s 21
-      notes: Rights coherence check; not a standalone cause of action.
-
+  - name: Wrongs Act 1958 (Vic)
+    provisions:
+    - s 48
+    - ss 83–85
+    notes: Public authority resource and responsibility filters.
+  - name: Charter of Human Rights and Responsibilities Act 2006 (Vic)
+    provisions:
+    - s 7
+    - s 21
+    - s 38
+    notes: Coherence check on duty recognition; no direct cause of action.
+  notes: []
 reading_level: Plain English (JD)
-
 tags:
-  - MLS_H1
-
+- MLS_H1
+- LAWS50025_Torts
+- Exam_Fundamentals
 keywords:
-  - torts
-  - victoria
-  - duty
-  - breach
-  - causation
-  - damages
+- public authority duty
+- salient features
+- statutory coherence
+- policy–operational distinction
+- resource allocation
+- Charter coherence
+- indeterminate liability
+- vulnerability and reliance
