--- a/src/jd/cards_yaml/0011-mental-harm-duty-framework.yml
+++ b/src/jd/cards_yaml/0011-mental-harm-duty-framework.yml
@@ -4,22 +4,22 @@ back: |
   Outline when the Wrongs Act 1958 (Vic) Pt XI compels recognition of a duty to avoid mental harm for rescuers, secondary victims, and workplace psychiatric injury.
 
   Rule.
-  Pt XI defines "mental harm" to include both pure and consequential psychiatric injury (s 72). A duty to guard against pure mental harm arises only if a person of normal fortitude would have suffered a recognised psychiatric illness that was reasonably foreseeable, assessed with the s 72(2) factors (relationship, control or assurance, absence of a sudden-shock requirement, and exposure). Consequential mental harm follows once physical injury is actionable. High Court guidance (Tame v New South Wales; Annetts v Australian Stations Pty Ltd (2002) 211 CLR 317 at [118]–[122]) confirms the focus on foreseeability and recognised illness.
+  Pt XI defines "mental harm" to include both pure and consequential psychiatric injury (s 72). A duty to guard against pure mental harm arises only if a person of normal fortitude would have suffered a recognised psychiatric illness that was reasonably foreseeable, assessed with the s 72(2) factors (relationship, control or assurance, absence of a sudden-shock requirement, and exposure). Consequential mental harm follows once physical injury is actionable. High Court guidance (Tame v New South Wales; Annetts v Australian Stations Pty Ltd (2002) 211 CLR 317 at [118]–[122]) confirms the focus on foreseeability, a recognised illness, and evidence capable of satisfying Evidence Act 2008 (Vic) s 79.
 
   Application scaffold.
   (1) Classify the harm as pure or consequential mental harm.
   (2) If pure mental harm, apply the s 72(1) normal-fortitude foreseeability test using the s 72(2) factors.
   (3) Apply s 73(1)–(2) scene and relationship limits for secondary victims and confirm the derivative-claim bar in s 73(3).
   (4) Rescuers: apply Wicks v State Rail Authority of NSW (2010) 241 CLR 60 at [45]–[50] to confirm foreseeability without a sudden-shock requirement.
-  (5) Workplace claims: evaluate reasonable foreseeability of psychiatric injury in the actual role context (Koehler v Cerebos (Australia) Ltd (2005) 222 CLR 44 at [36]–[40]; compare Nationwide News Pty Ltd v Naidu [2007] NSWCA 377 at [50]–[55]); note secondary-victim duties for close family in employer contexts (Gifford v Strang Patrick Stevedoring Pty Ltd (2003) 214 CLR 269 at [30]–[35]).
+  (5) Workplace claims: evaluate reasonable foreseeability of psychiatric injury in the actual role context (Koehler v Cerebos (Australia) Ltd (2005) 222 CLR 44 at [36]–[40]; compare Nationwide News Pty Ltd v Naidu [2007] NSWCA 377 at [50]–[55] (persuasive)); demand admissible psychiatric evidence via Evidence Act 2008 (Vic) s 79 and note secondary-victim duties for close family in employer contexts (Gifford v Strang Patrick Stevedoring Pty Ltd (2003) 214 CLR 269 at [30]–[35]).
 
   Authorities map.
-  - Tame/Annetts — Foreseeability and normal fortitude; no sudden-shock rule.
-  - Jaensch v Coffey (1984) 155 CLR 549 at [60]–[65] — Secondary-victim parameters.
-  - Gifford — Family secondary duty in employer settings.
-  - Wicks — Rescuers.
-  - Koehler — Workplace psychiatric injury.
-  - Naidu — Workplace bullying (NSWCA persuasive guidance).
+  - Tame v New South Wales; Annetts v Australian Stations Pty Ltd (2002) 211 CLR 317 at [118]–[122] — Foreseeability and normal fortitude; no sudden-shock rule.
+  - Jaensch v Coffey (1984) 155 CLR 549 at 569–572 — Secondary-victim parameters.
+  - Gifford v Strang Patrick Stevedoring Pty Ltd (2003) 214 CLR 269 at [30]–[35] — Family secondary duties in employer contexts.
+  - Wicks v State Rail Authority of NSW (2010) 241 CLR 60 at [45]–[52] — Rescuers and absence of sudden-shock gate.
+  - Koehler v Cerebos (Australia) Ltd (2005) 222 CLR 44 at [36]–[40] — Workplace psychiatric injury foreseeability.
+  - Nationwide News Pty Ltd v Naidu [2007] NSWCA 377 at [50]–[55] (persuasive) — Workplace bullying foreseeability.
 
   Statutory hook.
   - Wrongs Act 1958 (Vic) Pt XI (Mental Harm) ss 72–75.
@@ -27,16 +27,15 @@ back: |
   - Evidence Act 2008 (Vic) s 79 (expert evidence gatekeeping).
 
   Tripwires.
-  Consult the `tripwires` list below for recurring pitfalls (normal fortitude, sudden shock, s 73 limits, derivative-bar issues, and psychiatric-diagnosis requirements).
+  Recurring pitfalls: pure versus consequential mental harm, misuse of s 72(2) factors, overlooking s 73 limits, and failing to prove a recognised psychiatric illness—consult the dedicated `tripwires` field for detail.
 
   Conclusion.
   Duty recognition under Pt XI hinges on foreseeable psychiatric illness to a person of normal fortitude with s 73 limits satisfied; once duty is set, proceed to breach and causation under ss 48 and 51.
 
 why_it_matters: |
-  Pt XI questions dominate exam fact patterns on rescuers, secondary victims, and occupational stress. This scaffold forces fast classification, applies the correct statutory foreseeability filter, and avoids reviving discredited sudden-shock controls, while flagging expert-evidence and derivative-claim traps.
+  Pt XI questions dominate exam fact patterns on rescuers, secondary victims, and occupational stress. This scaffold forces fast classification, applies the correct statutory foreseeability filter, keeps s 73 limits front of mind, and flags expert-evidence plus derivative-claim traps under time pressure.
 
-mnemonic: |
-  CLASSIFY → FORESEE → s 73 GATE → WORKPLACE/RESCUER → EXPERT → EXIT
+mnemonic: CLASSIFY→FORESEE→GATE→WORKPLACE→EXPERT→EXIT
 
 diagram: |-
   ```mermaid
@@ -45,111 +44,23 @@ diagram: |-
       Issue
         When does Pt XI impose a duty (rescuer / secondary / workplace)?
       Rule
-        Normal-fortitude foreseeability: s 72(1)
-        Factors s 72(2); no sudden-shock rule
-        Consequential harm follows once physical injury actionable
-      Apply
-        Classify pure vs consequential
-        Secondary victims: s 73(1)–(2); derivative bar s 73(3)
+        s 72 definition: pure vs consequential
+        Foreseeability: normal fortitude (s 72(1))
+        Factors: s 72(2); no sudden-shock rule
+      Application
+        Classify harm: pure vs consequential
+        s 73 limits: relationship, scene, derivative bar
         Rescuers (Wicks) & workplace foreseeability (Koehler)
-      Authorities
-        Tame/Annetts; Jaensch
-        Wicks; Koehler; Gifford
       Statutes
         Wrongs Act Pt XI ss 72–75
         Wrongs Act ss 48, 51; Evidence Act s 79
+      Authorities
+        Tame/Annetts; Jaensch
+        Wicks; Koehler; Gifford
+        Naidu (persuasive)
   ```
-
 tripwires:
-  - "Treating 'normal fortitude' as a plaintiff attribute rather than a foreseeability test."
-  - "Re-imposing a 'sudden shock' requirement not found in s 72(2)."
-  - "Skipping s 73(1)–(2) scene/relationship limits."
-  - "Ignoring s 73(3) derivative-claim bar."
-  - "Pleading distress without a recognised psychiatric illness and expert diagnosis."
-
-anchors:
-  cases:
-    - name: Tame v New South Wales
-      citation: "[2002] HCA 35; (2002) 211 CLR 317"
-      court: HCA
-      pinpoints:
-        - "[118]-[122]"
-      notes: Foreseeability and normal fortitude in pure mental harm.
-
-    - name: Annetts v Australian Stations Pty Ltd
-      citation: (2002) 211 CLR 317
-      court: HCA
-      pinpoints:
-        - "[118]-[122]"
-      notes: Foreseeability and normal fortitude in pure mental harm.
-
-    - name: Jaensch v Coffey
-      citation: (1984) 155 CLR 549
-      court: HCA
-      pinpoints:
-        - "[60]-[65]"
-      notes: Secondary victim contours and limits.
-
-    - name: Gifford v Strang Patrick Stevedoring Pty Ltd
-      citation: (2003) 214 CLR 269
-      court: HCA
-      pinpoints:
-        - "[30]-[35]"
-      notes: Secondary victim duties to close family in employer contexts.
-
-    - name: Wicks v State Rail Authority of New South Wales
-      citation: (2010) 241 CLR 60
-      court: HCA
-      pinpoints:
-        - "[45]-[50]"
-      notes: Duty to rescuers without sudden shock control.
-
-    - name: Koehler v Cerebos (Australia) Ltd
-      citation: (2005) 222 CLR 44
-      court: HCA
-      pinpoints:
-        - "[36]-[40]"
-      notes: Workplace psychiatric injury duty.
-
-    - name: Nationwide News Pty Ltd v Naidu
-      citation: "[2007] NSWCA 377"
-      court: NSWCA
-      pinpoints:
-        - "[50]-[55]"
-      notes: Workplace bullying and employer liability.
-
-  statutes:
-    - name: Wrongs Act 1958 (Vic)
-      provisions:
-        - Pt XI
-        - s 48
-        - s 51
-        - s 72
-        - s 73
-        - s 74
-        - s 75
-      notes: >-
-        Pt XI: mental harm duties; s 48, 51: general breach and causation; s 72: mental harm definition and foreseeability; s 73: scene and relationship limits; s 74–75: damages limits.
-
-    - name: Evidence Act 2008 (Vic)
-      provisions:
-        - s 79
-      notes: Expert-opinion exception to the opinion rule.
-
-reading_level: "Plain English (JD)"
-
-tags:
-  - "MLS_H1"
-
-keywords:
-  - "torts"
-  - "victoria"
-  - "duty"
-  - "breach"
-  - "causation"
-  - "damages"
-  - "mental harm"
-  - "psychiatric injury"
-  - "rescuers"
-  - "secondary victims"
-  - "workplace"
+- Confusing pure and consequential mental harm.
+- Misapplying s 72(2) factors when testing foreseeability.
+- Overlooking s 73 requirements for secondary victims.
+- Failing to establish a recognised psychiatric illness.
