--- a/src/jd/cards_yaml/0017-vicarious-liability-master.yml
+++ b/src/jd/cards_yaml/0017-vicarious-liability-master.yml
@@ -1,103 +1,102 @@
-front: "In a vicarious liability problem, how do you determine whether an employer"
+front: "In a vicarious liability problem, how do you decide if an employer is liable for a worker's tort?"
 back: |
   Issue.
-  When can a defendant (typically an employer) be held liable for torts committed by another?
+  When will a Victorian defendant be vicariously liable for a tort committed by another person, usually an employee, instead of leaving liability solely with the tortfeasor?
+
   Rule.
-  Vicarious liability applies where (1) the tortfeasor is an employee (not an independent contractor) and (2) the tort occurred in the course of employment.
-  Classification uses a multifactorial test: control, integration, delegation, tools, risk allocation, remuneration (Stevens v Brodribb (1986) 160 Commonwealth Law Reports (Commonwealth Law Reports (CLR)) 16, 29-30).
+  Vicarious liability attaches only if the tortfeasor is an employee and the tort is committed in the course of employment. Classify status using the multifactorial test: control, integration, delegation rights, supply of tools, allocation of enterprise risk, and remuneration structure (Stevens v Brodribb (1986) 160 CLR 16, 29–30). Intentional torts may still be “in course” if the enterprise risk materialised and the act was an unauthorised mode of the authorised task (Deatons v Flew (1949) 79 CLR 370, 381–382).
+
   Application scaffold.
-  1) Classify worker: apply multifactorial indicators.
-  assess business integration and economic dependence.
-  2) Connect the tort to employment: proximity to duties, benefit to employer, enterprise risk.
-  exclude frolics.
-  3) For intentional torts (eg, battery), test unauthorised mode.
-  for institutional abuse, test close connection.
+  1) Identify the tortfeasor and walk through each indicator, explaining why contractor hallmarks (independence, own business, assumption of risk) are outweighed by employment features.
+  2) Link the tort to employment by testing temporal and geographic proximity, benefit to the employer, and whether enterprise risk materialised; exclude frolics or personal vendettas.
+  3) For intentional torts or institutional settings, show how the unauthorised mode analysis keeps liability within or outside the course of employment.
+  4) Address statutory overlays: Wrongs Act 1958 (Vic) s 48 breach calculus, Pt VBA damages caps, and any indemnity or contribution regimes.
+  5) Conclude with liability, remedies, and follow-up issues such as contribution, insurance, or compliance responses.
+
   Authorities map.
+  - Stevens v Brodribb (1986) 160 CLR 16, 29–30 — Multifactorial employment classification; contractors typically outside vicarious liability.
+  - Deatons v Flew (1949) 79 CLR 370, 381–382 — Intentional torts as unauthorised modes when enterprise risk is engaged.
+
   Statutory hook.
-  Wrongs Act 1958 (Vic) Pt Victorian statutory damages part (Pt Victorian Bar Association (VBA)) (damages caps) if personal injury.
-  otherwise no core statutory source for liability.
+  - Wrongs Act 1958 (Vic) s 48 — Reasonable-response calculus for employer precautions.
+  - Wrongs Act 1958 (Vic) Pt VBA — Damages thresholds and caps for personal injury claims.
+
   Tripwires.
-  Treating any employee tort as automatically “in course”.
-  Misclassifying contractors by single‑factor focus.
-  Ignoring Deatons for battery.
-  Confusing vicarious liability with non‑delegable duty.
-  Forgetting Pt VBA caps in personal injury.
+  - Assuming every employee tort is automatically "in course".
+  - Misclassifying a contractor by privileging a single indicator.
+  - Ignoring Deatons v Flew when intentional battery is pleaded.
+  - Conflating vicarious liability with non-delegable duties.
+
   Conclusion.
-  __HD__0__
-  State the governing test and any operative statutory provisions.
-  __HD__1__
-  Apply issues -> rules -> apply to facts -> conclude.
-  __HD__2__
-  Lead: [insert principal case].
-  Lead: [insert principal case].
-  __HD__3__
-  Primary: Wrongs Act 1958 (Vic) s 48.
-  __HD__4__
-  
-  - Don’t exceed statutory thresholds/caps
-  
-  - Don’t conflate consequential with pure economic loss
-  
-  - Apply coherence checks before extending duties.
-  __HD__5__
-  Tie the analysis back to the pleadings and the available remedies/defences.
+  Deliver the classification, connect the tort to enterprise risk, address statutory overlays, and state liability plus remedial consequences so the advice remains exam-ready.
 
 why_it_matters: |
-  Vicarious liability is a recurrent loss‑allocation device in exams.
-   High‑band answers cleanly classify worker status, connect the tort to authorised
-   work, and avoid conflating vicarious liability with non‑delegable duty. Adding Pt
-   VBA caps in personal injury shows statutory literacy. Policy (enterprise risk, deterrence,
-   compensation) elevates analysis.
+  Vicarious liability frequently couples with breach and damages in Victorian exams. High-band answers classify the relationship, isolate enterprise risk, and explain intentional tort coverage while name-checking Wrongs Act 1958 (Vic) s 48 and Pt VBA caps. Doing so avoids conflating non-delegable duties, meets statutory literacy expectations, and flags contribution or insurance follow-up.
 
-mnemonic: CLASS → Control, Labour integration, Allocation of risk, Substitution limits,
-
+mnemonic: CLASS → Control, Labour, Allocation, Scope
 diagram: |
   ```mermaid
   mindmap
-   root((Card overview))
-   Issue
-   Rule
-   Application
-   Conclusion
-   - Issue
-   - Rule
-   - Application
-   - Conclusion
+  root((Vicarious Liability))
+    A. Issue
+      Liability for employee torts
+    B. Rule
+      Employee + course of employment
+      Multifactorial test: control, integration, risk
+      Exclude independent contractors
+    C. Application
+      Classify worker, connect tort to employment
+      Assess proximity to duties, benefit to employer
+      Consider intentional torts, test unauthorised mode
+    D. Limits/Statutes
+      s 48 Wrongs Act 1958 (Vic)
+      Pt VBA caps for personal injury
+    E. Authorities
+      Stevens v Brodribb
+      Deatons v Flew
+      Relevant case law
   ```
 
 tripwires:
-  - "Confusing independent contractor with employee due to single-factor focus"
-  - "Assuming any wrongful act by employee is always 'in course'"
-  - "Overlooking special battery rule in Deatons v Flew"
-  - "Ignoring Wrongs Act statutory caps in damages"
-  - "Neglecting enterprise risk rationale"
-  - "Missing modern institutional liability extensions"
+  - Assuming all employee torts are in course of employment.
+  - Misclassifying workers based on a single factor.
+  - Neglecting the Deatons test for battery cases.
+  - Confusing vicarious liability with non-delegable duties.
 
 anchors:
   cases:
-    - TODO anchor case 1
+    - name: Stevens v Brodribb Sawmilling Co Pty Ltd v Hughes
+      citation: (1986) 160 CLR 16
+      court: HCA
+      pinpoints:
+        - "29–30"
+      notes: Multifactorial employment classification; contractors generally outside vicarious liability.
+    - name: Deatons Pty Ltd v Flew
+      citation: (1949) 79 CLR 370
+      court: HCA
+      pinpoints:
+        - "381–382"
+      notes: Unauthorised mode analysis for intentional torts within enterprise risk.
   statutes:
-    - Wrongs Act 1958 (Vic) s 48
-    - Wrongs Act 1958 (Vic) s 26
-    - Wrongs Act 1958 (Vic) s 51
+    - name: Wrongs Act 1958 (Vic)
+      provisions:
+        - s 48
+        - Pt VBA
+      notes: s 48 breach calculus and Pt VBA damages caps for personal injury claims.
+  notes: []
 
-reading_level: JD-ready
+reading_level: Plain English (JD)
 
 tags:
-  - laws50025 - torts
-  - vicarious_liability
-  - exam_fundamentals
-  - mls_h1
   - MLS_H1
+  - LAWS50025_Torts
+  - Exam_Fundamentals
 
 keywords:
-  - vicarious-liability
-  - employee
-  - independent-contractor
-  - course-of-employment
-  - frolic
-  - enterprise-risk
-  - loss-allocation
-  - control-test
-  - integration-test
-  - multifactorial-test
+  - vicarious liability
+  - course of employment
+  - multifactorial test
+  - enterprise risk
+  - intentional torts
+  - Wrongs Act 1958 (Vic)
+  - damages caps
