--- a/src/jd/cards_yaml/0020-remoteness-consequential-mental-harm.yml
+++ b/src/jd/cards_yaml/0020-remoteness-consequential-mental-harm.yml
@@ -13,21 +13,20 @@ back: |
   2) Confirm it is consequential on another injury (s 67).
   3) Apply s 74(1)(a)-(b) normal‑fortitude filter (plus known susceptibility) with s 74(2)’s circumstances.
   __HD__2__
-  Classification of harm: s 67.
   RPI requirement: ss 67, 74.
   Statutory filter: s 74(1)-(2).
   __HD__3__
   Wrongs Act 1958 (Vic) ss 67, 74 (context: ss 72-73 for pure mental harm).
   __HD__4__
-  Treating grief/worry as RPI.
-  Ignoring s 74(2)’s inclusion of the initial injury as part of the circumstances.
-  Importing s 72-73 pure mental harm controls into consequential claims.
+  Failing to classify the claim as consequential (s 74) rather than pure (ss 72-73).
+  Ignoring the normal-fortitude filter in s 74(1)(a)-(b) and known susceptibility data.
+  Confusing mere distress with a recognised psychiatric injury (RPI) under s 67.
+  Neglecting s 74(2)'s direction to assess the circumstances, including the initial injury.
   __HD__5__
   Consequential psychiatric injury is recoverable when an RPI of that kind was reasonably foreseeable within s 74’s framework.
   mere distress without RPI fails.
   __HD__0__
   State the governing test and any operative statutory provisions.
-  __HD__1__
   Apply issues -> rules -> apply to facts -> conclude.
   __HD__2__
   Lead: Tame v New South Wales; Annetts v Australian Stations Pty Ltd [2002] HCA 35; (2002) 211 CLR 317.
@@ -54,48 +53,21 @@ why_it_matters: |
    precise mechanism predictions lose marks; sequencing statutory elements with foreseeable-kind
    analysis earns H1 credit.
 
-mnemonic: KIND–RPI–FORTITUDE: Kind foreseeable? → Recognised psychiatric illness
+mnemonic: "KIND–RPI–FORTITUDE: Kind foreseeable? → Recognised psychiatric illness
  (s 67) → Normal fortitude / known susceptibility (s 74) → Remoteness respects thin
- skull.
-
+ skull."
 diagram: |
   ```mermaid
   mindmap
-   root((Card overview))
-   Issue
-   Rule
-   Application
-   Conclusion
-   - Issue
-   - Rule
-   - Application
-   - Conclusion
+    root((Consequential Mental Harm))
+    A. Issue
+      - Scope of liability for psychiatric injury
+    B. Rule
+      - RPI under s 67; consequentiality (s 67)
+    C. Application
+      - s 74 normal-fortitude filter; circumstances (s 74(2))
+    D. Limits/Statutes
+      - s 48 Wrongs Act 1958 (Vic)
+    E. Authorities
+      - Tame v New South Wales; Annetts v Australian Stations Pty Ltd [2002] HCA 35
   ```
-
-tripwires:
-  - "Treating grief or worry as sufficient without a recognised psychiatric illness."
-  - "Forgetting s 74(2) folds the initial injury into the foreseeability circumstances."
-  - "Applying pure mental harm controls (ss 72–73) to consequential claims."
-  - "Demanding foreseeability of precise mechanism rather than the kind of harm."
-  - "Misusing thin skull to dodge the kind-of-harm inquiry."
-
-anchors:
-  cases:
-    - Tame v New South Wales; Annetts v Australian Stations Pty Ltd [2002] HCA 35; (2002) 211 CLR 317
-  statutes:
-    - Wrongs Act 1958 (Vic) s 48
-    - Wrongs Act 1958 (Vic) s 26
-    - Wrongs Act 1958 (Vic) s 51
-
-reading_level: Plain English (JD)
-
-tags:
-  - MLS_H1
-
-keywords:
-  - torts
-  - victoria
-  - duty
-  - breach
-  - causation
-  - damages
