--- a/src/jd/cards_yaml/0021-trespass-goods-conversion-detinue.yml
+++ b/src/jd/cards_yaml/0021-trespass-goods-conversion-detinue.yml
@@ -1,99 +1,105 @@
-front: "Interference with goods: classify trespass, conversion, detinue, and state\n the\
-  \ remedy?"
+front: "How do you classify trespass, conversion, and detinue remedies for goods?"
 back: |
   Issue.
-  Which interference-with-goods tort applies and what remedy follows?
-  Note: Overflow from front .
-  “valuation dates, return orders, detention damages”.
+  How should a Victorian court classify interference with goods as trespass, conversion, or detinue, and what remedial consequences follow for the plaintiff?
+
   Rule.
-  Trespass to goods protects possession against direct interference and is actionable per se (Hutchins v Maughan [1947] Victorian Law Reports (Victorian Law Reports (VLR)) 131, 132-133), so nominal damages are available.
-  even without proof of loss.
+  Trespass to goods protects possession against direct interference and is actionable per se, supporting nominal damages without proof of loss (Hutchins v Maughan [1947] VLR 131, 132–133). Conversion requires deliberate or negligent dominion inconsistent with the immediate right to possession, fixing damages at value at conversion (Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230). Detinue responds to continued wrongful detention after demand and refusal, yielding return or judgment value assessed at trial plus detention damages (General Credits (Finance) Ltd v Stibbard (1989) 18 NSWLR 555, 561–562 (NSWCA)).
+
   Application scaffold.
-  1) Title to sue: establish actual possession or an immediate right (consider bailors/bailees.
-  jus tertii rarely assists defendants).
-  2) Characterise the interference: direct trespass (actionable per se), dominion supporting conversion, or demand‑refusal activating detinue.
+  (1) Title to sue: prove actual possession or immediate right; address bailor/bailee standing and exclude jus tertii defences. (2) Characterise the interference: direct, forcible contact (trespass); dominion or disposition inconsistent with title (conversion); continuing detention after unequivocal demand (detinue). (3) Quantify relief: nominal/compensatory damages for trespass; market value at conversion plus consequential loss for conversion; specific restitution or judgment value at trial with detention damages for detinue. (4) Test statutory overlays (Wrongs Act 1958 (Vic) s 48, Pt VBA caps) and equitable defences.
+
   Authorities map.
-  Trespass actionable per se and nominal damages: Hutchins v Maughan [1947] VLR 131, 132-133.
-  Conversion .
-  inconsistent dominion/refusal: Penfolds 74 Commonwealth Law Reports (Commonwealth Law Reports (CLR)) 204, 228-230.
-  Bunnings [2011] New South Wales Court of Appeal (NSWCA) 342, [124].
+  - Hutchins v Maughan [1947] VLR 131 — trespass to goods is actionable per se.
+  - Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204 — dominion defining conversion.
+  - Bunnings Group Ltd v CHEP Australia Ltd [2011] NSWCA 342, [124] — demand/refusal indicators for conversion/detinue.
+  - General Credits (Finance) Ltd v Stibbard (1989) 18 NSWLR 555, 561–562 (NSWCA) — valuation timing in detinue.
+
   Statutory hook.
+  - Wrongs Act 1958 (Vic) s 48 — care and causation filters where personal injury loss is pleaded.
+  - Wrongs Act 1958 (Vic) Pt VBA caps and thresholds — adjust damages when applicable.
+
   Tripwires.
+  Guard against conflating tort labels, mishandling jus tertii, overlooking possession, or mis-timing detinue valuation as detailed below.
+
   Conclusion.
-  Correct classification governs remedy: trespass protects possession per se.
-  conversion substitutes value at conversion.
-  detinue delivers return or judgment-value with detention damages because the wrong continues until compliance.
-  __HD__0__
-  State the governing test and any operative statutory provisions.
-  __HD__1__
-  Apply issues -> rules -> apply to facts -> conclude.
-  __HD__2__
-  Lead: Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230.
-  __HD__3__
-  Primary: Wrongs Act 1958 (Vic) s 48.
-  __HD__4__
-  
-  - Don’t exceed statutory thresholds/caps
-  
-  - Don’t conflate consequential with pure economic loss
-  
-  - Apply coherence checks before extending duties.
-  __HD__5__
-  Tie the analysis back to the pleadings and the available remedies/defences.
+  Classify the tort by possession, dominion, and demand/refusal, deliver the matching remedy (trespass nominal or corrective damages; conversion value at conversion; detinue return or judgment value with detention damages), and confirm statutory limits are satisfied.
 
 why_it_matters: |
-  MLS exams reward precise sequencing: stand up your possessory title
-   first, then choose between trespass (direct interference), conversion (dominion
-   inconsistent with immediate right), and detinue (demand/refusal). Each tort drives
-   a different remedy—especially the valuation dates and detention damages. Mislabel
-   the tort and you misstate the relief, losing marks. Bunnings ensures you remember
-   demand/refusal can evidence conversion, while Heavener explains why detinue’s valuation
-   waits until judgment. Keep the jus tertii rule and bailment standing in view to
-   secure high-band answers.
+  MLS exam problems often bundle multiple interferences with goods. Sequencing title, characterisation, and remedy prevents mixing trespass with conversion, keeps the jus tertii defence in its lane, and protects marks on valuation timing for detinue.
 
-mnemonic: TCD-J → Title → Characterise → Date (conversion vs judgment) → Jus tertii
-
+mnemonic: TITLE-DOMINION-DEMAND-VALUE
 diagram: |
   ```mermaid
   mindmap
-   root((Card overview))
-   Issue
-   Rule
-   Application
-   Conclusion
-   - Issue
-   - Rule
-   - Application
-   - Conclusion
+    root((Interference with goods))
+      A. Issue
+        Identify applicable tort
+      B. Rule
+        Trespass protects possession
+        Conversion = dominion
+        Detinue = demand/refusal
+      C. Application
+        Title to sue analysis
+        Characterise interference
+        Select remedy pathway
+      D. Limits/Statutes
+        Wrongs Act 1958 (Vic) s 48
+        Wrongs Act Pt VBA caps
+      E. Authorities
+        Hutchins v Maughan [1947] VLR 131
+        Penfolds Wines v Elliott (1946) 74 CLR 204
+        Bunnings Group v CHEP [2011] NSWCA 342
   ```
-
 tripwires:
-  - "Pleading conversion where the interference was merely negligent loss or misdelivery."
-  - "Omitting a clear demand/refusal before alleging detinue."
-  - "Using the wrong valuation date (detinue ≠ conversion)."
-  - "Assuming legal ownership is required when possessory title suffices."
-  - "Arguing jus tertii to defeat a plaintiff with the better possessory right."
-
+- Don't confuse trespass with conversion.
+- Avoid misapplying the jus tertii rule.
+- Don't overlook the need for actual possession.
+- Ensure correct valuation timing for detinue.
 anchors:
   cases:
-    - Penfolds Wines Pty Ltd v Elliott [1946] HCA 46; (1946) 74 CLR 204, 228–230
-    - Butler v Egg & Egg Pulp Marketing Board [1966] HCA 74; (1966) 114 CLR 185, 191–192
-    - Heavener v Loomes [1924] HCA 10; (1924) 34 CLR 306
-    - Bunnings Group Ltd v CHEP Australia Ltd [2011] NSWCA 342; (2011) 82 NSWLR 420, [124]
+    - name: Hutchins v Maughan
+      citation: [1947] VLR 131
+      court: VSC
+      pinpoints:
+        - "132–133"
+      notes: Trespass to goods actionable per se with nominal damages.
+    - name: Penfolds Wines Pty Ltd v Elliott
+      citation: [1946] HCA 46; (1946) 74 CLR 204
+      court: HCA
+      pinpoints:
+        - "228–230"
+      notes: Dominion inconsistent with title defines conversion.
+    - name: Bunnings Group Ltd v CHEP Australia Ltd
+      citation: [2011] NSWCA 342
+      court: NSWCA
+      pinpoints:
+        - "[124]"
+      notes: Demand/refusal evidence for conversion or detinue.
+    - name: General Credits (Finance) Ltd v Stibbard
+      citation: (1989) 18 NSWLR 555
+      court: NSWCA
+      pinpoints:
+        - "561–562"
+      notes: Judgment-date valuation in detinue.
   statutes:
-    - Wrongs Act 1958 (Vic) s 48
-    - Wrongs Act 1958 (Vic) s 26
-    - Wrongs Act 1958 (Vic) s 51
-
+    - name: Wrongs Act 1958 (Vic)
+      provisions:
+        - s 48
+        - Pt VBA
+      notes: Standard of care and damages caps affecting interference claims with personal injury components.
+  notes: []
 reading_level: Plain English (JD)
-
 tags:
-  - MLS_H1
-
+- MLS_H1
+- LAWS50025_Torts
+- Exam_Fundamentals
 keywords:
-  - torts
-  - victoria
-  - duty
-  - breach
-  - causation
-  - damages
+- trespass to goods
+- conversion
+- detinue
+- possession
+- dominion
+- demand refusal
+- valuation date
+- jus tertii
